typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts:3:6
  |
3 |     [e]: number = 0;
  |      ^

error: TS1166 {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            47,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts:3:5
  |
3 |     [e]: number = 0;
  |     ^^^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            54,
        ),
        hi: BytePos(
            56,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts:4:6
  |
4 |     [e2]: number
  |      ^^

error: TS1166 {
    span: Span {
        lo: BytePos(
            53,
        ),
        hi: BytePos(
            65,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName28.ts:4:5
  |
4 |     [e2]: number
  |     ^^^^^^^^^^^^

